src/pages/clippingsMgr.css
/* This Source Code Form is subject to the terms of the Mozilla Public
 * License, v. 2.0. If a copy of the MPL was not distributed with this
 * file, You can obtain one at http://mozilla.org/MPL/2.0/. */

@import url("../lib/fancytree/skin-win8/ui.fancytree.min.css");
@import url("../lib/contextMenu/jquery.contextMenu.css");
@import url("../lib/jquery-ui/jquery-ui.min.css");
@import url("../style/laf.css");
@import url("../style/lightbox.css");
@import url("../style/tooltip.css");
@import url("../style/clippingTree.css");
@import url("../style/clippingLabelPicker.css");
@import url("../style/searchbox.css");


:root {
    --toolbar-height: 30px;
    --statusbar-height: 22px;

    --color-bkgd: white;
    --color-default-text: black;
    --color-disabled-text: rgba(0, 0, 0, 0.40);
    --color-textbox-bkgd: -moz-field;
    --color-listbox-bkgd: #fff;
    --color-not-synced-items-text: rgba(0, 0, 0, 0.4);
    --color-not-synced-items-selected-text: rgba(0, 0, 0, 0.4);
    --color-main-toolbar-bkgd: linear-gradient(to bottom, #fcfcfc 0%, #dedede 100%);
    --color-main-toolbar-text: #0c0c0d;
    --color-main-toolbar-border: silver;
    --color-plchldr-toolbar-bkgd: #eee;
    --color-plchldr-toolbar-text: #0c0c0d;
    --color-toolbarbtn-hover-bkgd: rgba(12, 12, 13, 0.2);
    --color-toolbarbtn-active-bkgd: rgba(12, 12, 13, 0.3);
    --color-reload-sync-fldr-btn-bkgd: #fbfbfb;
    --color-reload-sync-fldr-btn-border: #ddd;
    --color-reload-sync-fldr-btn-hover-bkgd: #ebebeb;
    --color-reload-sync-fldr-btn-hover-border: #b1b1b1;
    --color-reload-sync-fldr-btn-active-bkgd: #d7d7db;
    --color-reload-sync-fldr-btn-active-border: #b1b1b1;
    --color-toolbar-menubtn-open: #d7d7db;
    --color-clippings-tree-bkgd: #fbfbfb;
    --color-tree-splitter: #fbfbfb;
    --color-tree-splitter-border: #b1b1b1;
    --color-folder-only-bkgd: #f6f6f6;
    --color-item-properties-textbox-border: var(--color-tb-border);
    --color-details-pane-bkgd: white;
    --color-details-pane-btn-bkgd: #fbfbfb;
    --color-details-pane-btn-hover-bkgd: #ebebeb;
    --color-details-pane-btn-border: 1px solid #b1b1b1;
    --color-details-pane-btn-text: black;
    --color-statusbar-bkgd: -moz-dialog;
    --color-th-bkgd: #eee;
    --color-th-border: #d4d4d4;
    --color-cxtmenu-bkgd: #fff;
    --color-cxtmenu-border: #bebebe;
    --color-cxtmenu-text: #2f2f2f;
    --color-cxtmenu-menuitem-active-bkgd: #d7d7db;
    --color-cxtmenu-menuitem-hover-bkgd: #ededf0;
    --color-cxtmenu-menuitem-hover-text: #0c0c0d;
    --color-cxtmenu-separator: #e6e6e6;
    --color-dlg-fieldset-border: #b1b1b1;

    --url-contextmenu-checked-img: url("../img/checked.svg");
    --url-contextmenu-submenu-arrow: url("../img/submenu-arrow.svg");
    --url-toolbar-btn-img-newClipping: url("../img/newClipping.svg");
    --url-toolbar-btn-img-newFolder: url("../img/newFolder.svg");
    --url-toolbar-btn-img-undo: url("../img/undo.svg");
    --url-toolbar-btn-img-undo-hover: url("../img/undo_hover.svg");
    --url-toolbar-btn-img-undo-active: url("../img/undo_hover.svg");
    --url-toolbar-btn-img-tools: url("../img/options.svg");
    --url-toolbar-btn-img-tools-hover: url("../img/options_hover.svg");
    --url-toolbar-btn-img-tools-active: url("../img/options_hover.svg");
    --url-toolbar-btn-img-tools-menu-open: url("../img/options_menuopen.svg");
    --url-toolbar-btn-img-dropdown: url("../img/drop-down.svg");
    --url-toolbar-btn-img-help: url("../img/help.svg");
    --url-toolbar-btn-img-help-hover: url("../img/help_hover.svg");
    --url-toolbar-btn-img-help-active: url("../img/help.svg");
    --url-toolbar-btn-img-ok: url("../img/ok.svg");
    --url-toolbar-btn-img-ok-hover: url("../img/ok_hover.svg");
    --url-toolbar-btn-img-ok-active: url("../img/ok_active.svg");
    --url-toolbar-btn-img-cancel: url("../img/cancel.svg");
    --url-toolbar-btn-img-cancel-hover: url("../img/cancel_hover.svg");
    --url-toolbar-btn-img-cancel-active: url("../img/cancel_active.svg");
    --url-toolbar-btn-img-customPlchldr: url("../img/customPlchldr.svg");
    --url-toolbar-btn-img-customPlchldr-hover: url("../img/customPlchldr_hover.svg");
    --url-toolbar-btn-img-autoIncPlchldr: url("../img/numericPlchldr.svg");
    --url-toolbar-btn-img-autoIncPlchldr-hover: url("../img/numericPlchldr_hover.svg");
    --url-icon-synced-clippings-fldr: url("../img/synced-clippings.svg");
}
/* ... */

